# OptiTools

./: CMakeLists.txt  euler.cpp  main.cpp  module.cpp
install/: opti_tools.pyi  test.py
install/lib/pkgconfig/: fmt.pc
lib/celest/: kepler_orbit.h
lib/math/: gradient.h  gradient_descent.h  vec2d.h  vec3d.h
lib/module/: module.cpp
lib/solver/: RK4.h  coordinates.h  euler.h  midpoint.h  solver.h  verlet.h  yoshida.h
python/: test.py
src/: ascent_profile_1.cpp  ascent_profile_satV.cpp  gravity_turn.cpp  gravity_turn_2.cpp  test.cpp  test_V.cpp  test_coo.cpp  test_kepler.cpp
src/math/: vec3d.h
src/module/: module.cpp
src/solver/: euler.cpp  euler.h
